--- a/seMgmtApp/templates/footer.html
+++ b/seMgmtApp/templates/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="footer-color">
+<footer class="footer-main">
 
     <!-- Footer Elements -->
     <div class="container">
