--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -60,7 +60,7 @@
 
 
 <!-- Carousel To rent -->
-	<div class="container carousel-sale">
+	<div class="container carousel-rent">
 		<div class="carousel slide" id="main-carousel" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#main-carousel" data-slide-to="0" class="active"></li>
