--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -8,8 +8,8 @@
         <h4>ADD NEW PROPERTY</h4>
     </div>
     <div class="row mx-auto px-2 form-property">
-        <form>
-            <!-- RENT OR BUY Buttons -->
+        <form action="{{ url_for('properties.add_property') }}" method="POST">
+            <!-- Category RENT OR BUY -->
             <ul class="nav nav-tabs justify-content-center mb-2">
                 <li class="nav-item">
                     <a class="nav-link active" id="toBuy-tab" data-toggle="tab" role="tab" aria-controls="to buy"
@@ -21,70 +21,62 @@
                 </li>
             </ul>
 
-            <!--             <div class="rent-buy-buttons mb-3">
-                <div class="row mr-2 button-buy">TO BUY</div>
-                <div class="row ml-2 button-rent">TO RENT</button>
-                </div>
-            </div> -->
             <!-- Property Type -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="" required>
-                    <option selected>Property Type</option>
-                    <option value="1" active>House</option>
-                    <option value="2">Apartment</option>
-                    <option value="3">Other</option>
+                <select class="custom-select" id="property_type" name="property_type" required>
+                    <option value="" disabled selected>Property Type</option>
+                    {% for type in types %}
+                    <option value="{{ type }}">{{ type }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Beds -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="" required>
-                    <option selected>Beds</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3+">3+</option>
+                <select class="custom-select" id="num_bed" name="num_bed" required>
+                    <option value="" disabled selected>Beds</option>
+                    {% for beds in num_bed %}
+                    <option value="{{ beds }}">{{ beds }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Baths -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="" required>
-                    <option selected>Baths</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3+">3+</option>
+                <select class="custom-select" id="num_bath" name="num_bath" required>
+                    <option value="" disabled selected>Baths</option>
+                    {% for baths in num_bath %}
+                    <option value="{{ baths }}">{{ baths }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Address -->
             <div class="form-group">
-                <input type="text" class="form-control" id="inputAddress" placeholder="Address" required>
+                <input type="text" class="form-control" id="address" name="address" placeholder="Address" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" required>
+                <input type="text" class="form-control" id="address2" name="address2" placeholder="Apartment, studio or floor number">
             </div>
             <!-- District -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="inputDistrict" required>
-                    <option>District</option>
-                    <option value="portsmouth">Portsmouth</option>
-                    <option value="havant">Havant</option>
-                    <option value="fareham">Fareham</option>
-                    <option value="gosport">Gosport</option>
-                    <option value="eastleigh">Eastleigh</option>
-                    <option value="other">Other</option>
+                <select class="custom-select" id="district" name="district" required>
+                    <option value="" disabled selected>District</option>
+                    {% for district in districts %}
+                    <option value="{{ district }}">{{ district }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- City -->
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" id="inputCity" placeholder="City" required>
+                    <input type="text" class="form-control" id="city" name="city" placeholder="City" required>
                 </div>
                 <!-- ZIPCODE -->
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" id="inputZip" placeholder="Zipcode" required>
+                    <input type="text" class="form-control" id="zipCode" name="zipCode" placeholder="Zipcode" required>
                 </div>
             </div>
             <!-- Description -->
             <div class="form-group">
-                <textarea class="form-control" rows="7" id="description" placeholder="Description"></textarea>
+                <textarea class="form-control" rows="7" id="description" name="description" placeholder="Description"></textarea>
             </div>
             <!-- Image -->
             <div class="form-group">
