--- a/seMgmtApp/templates/edit_property.html
+++ b/seMgmtApp/templates/edit_property.html
@@ -7,62 +7,60 @@
     <div class="row add-title mb-3">
         <h4>EDIT PROPERTY</h4>
     </div>
-    <div class="row mx-auto px-2 form-property">
+    <div class="row mx-auto px-2 mt-3 form-property">
         <form>
             <!-- Property Type -->
-            <div class="input-group my-3">
-                <select class="custom-select" id="">
-                    <option selected>Property Type</option>
-                    <option value="1" active>House</option>
-                    <option value="2">Apartment</option>
-                    <option value="3">Other</option>
+            <div class="input-group mb-3">
+                <select class="custom-select" id="property_type" name="property_type" required>
+                    <option value="" disabled selected>Property Type</option>
+                    {% for type in types %}
+                    <option value="{{ type }}">{{ type }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Beds -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="">
-                    <option selected>Beds</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3+">3+</option>
+                <select class="custom-select" id="num_bed" name="num_bed" required>
+                    <option value="" disabled selected>Beds</option>
+                    {% for beds in num_bed %}
+                    <option value="{{ beds }}">{{ beds }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Baths -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="">
-                    <option selected>Baths</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3+">3+</option>
+                <select class="custom-select" id="" required>
+                    <option value="" disabled selected>Baths</option>
+                    {% for baths in num_bath %}
+                    <option value="{{ baths }}">{{ baths }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- Address -->
             <div class="form-group">
-                <input type="text" class="form-control" id="inputAddress" placeholder="Address">
+                <input type="text" class="form-control" id="inputAddress" placeholder="Address" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                <input type="text" class="form-control" id="inputAddress2"
+                    placeholder="Apartment, studio or floor number" required>
             </div>
             <!-- District -->
             <div class="input-group mb-3">
-                <select class="custom-select" id="inputDistrict">
-                    <option>District</option>
-                    <option value="portsmouth">Portsmouth</option>
-                    <option value="havant">Havant</option>
-                    <option value="fareham">Fareham</option>
-                    <option value="gosport">Gosport</option>
-                    <option value="eastleigh">Eastleigh</option>
-                    <option value="other">Other</option>
+                <select class="custom-select" id="" required>
+                    <option value="" disabled selected>District</option>
+                    {% for district in districts %}
+                    <option value="{{ district }}">{{ district }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <!-- City -->
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" id="inputCity" placeholder="City">
+                    <input type="text" class="form-control" id="inputCity" placeholder="City" required>
                 </div>
                 <!-- ZIPCODE -->
                 <div class="form-group col-md-6">
-                    <input type="text" class="form-control" id="inputZip" placeholder="Zipcode">
+                    <input type="text" class="form-control" id="inputZip" placeholder="Zipcode" required>
                 </div>
             </div>
             <!-- Description -->
