--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -1,17 +1,30 @@
+@import url('https://fonts.googleapis.com/css?family=Great Vibes:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');
+
+
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-image: url('../img/background.png');
+    background-image: url('../img/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400; 
 }
 
 main {
     display: flex;
     margin-top: 4rem;
     flex: 1 0 auto;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.nav-item {
+    cursor: pointer;
 }
 
 .navbar-color {
@@ -59,6 +72,7 @@ main {
 .btn-block+.btn-block {
     margin-top: 0;
 }
+
 /* REGISTER */
 
 .add-title {
@@ -71,7 +85,7 @@ main {
     color: white;
 }
 
-.add-title > h4 {
+.add-title>h4 {
     margin-bottom: 0;
 }
 
@@ -124,26 +138,120 @@ main {
     background-color: red;
 }
 
+/* PROPERTY LISTING */
+
+.listing-selector {
+    text-align: right;
+    margin-bottom: 2rem;
+}
+
+.selector-options {
+    border-radius: 0;
+    width: 200px;
+}
+
+.card-box {
+    margin: 0 0 1rem 0;
+    border: 2px solid rgb(65, 65, 65);
+    border-radius: 15px;
+}
+
+.card-address-box {
+    justify-content: center;
+    font-weight: bold;
+    margin: 0;
+    padding: 15px;
+}
+
+.card-price-box {
+    border: 2px solid grey;
+    border-radius: 10px;
+    justify-content: center;
+    margin: 0 10px;
+    padding: 15px 5px;
+}
+
+.card-footer-box {
+    margin: 0;
+    padding: 15px;
+}
+
+.card-footer-beds,
+.card-footer-baths {
+    font-size: 25px;
+    color: grey;
+    margin: 0;
+}
+
+.card-description-box {
+    background-color: #FFF;
+    font-size: 25px;
+    border-radius: 0 0 15px 15px;
+}
+
+.description-price-box {
+    justify-content: center;
+    margin: 0;
+    padding: 5px;
+}
+
+.property-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px 15px 0 0;
+}
+
+.card-img {
+    width: 100%;
+    height: 300px;
+    align-items: center;
+    border-bottom: 1px solid grey;
+    border-radius: 15px 15px 0 0;
+}
+
+.price-box {
+    padding-bottom: .5rem;
+}
+
+.card-price {
+    color: #000;
+    margin-left: 5px;
+}
+
+.card-bed-box,
+.card-bath-box {
+    justify-content: center;
+    margin: 0;
+}
+
+.bed-icon,
+.bath-icon {
+    color: rgb(18, 18, 107);
+    margin-right: 15px;
+    padding-top: 5px;
+}
+
+.bath-info {
+    margin-left: 5px;
+}
 /* -----------------------------------
     MEDIA QUERY
 -------------------------------------- */
 
 /* Mobile screen under 359px */
-@media (max-width: 359px) {
-}
+@media (max-width: 359px) {}
 
 @media (min-width: 575px) {
     main {
         margin-top: 6rem;
     }
+
     .navbar-logo {
         padding: 5rem 5rem 0 5rem;
     }
 }
 
-@media (min-width: 694px) {
-
-}
+@media (min-width: 694px) {}
 
 @media (min-width: 1200px) {
     main {
@@ -155,10 +263,6 @@ main {
     }
 }
 
-@media (min-width: 1328px) {
+@media (min-width: 1328px) {}
 
-}
-
-@media (min-width: 1550px) {
-
-}
+@media (min-width: 1550px) {}
