--- a/seMgmtApp/templates/base.html
+++ b/seMgmtApp/templates/base.html
@@ -27,13 +27,14 @@
         {% include "footer.html" %}
     </footer>
 
-
+    <!-- Scripts-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="{{url_for('static', filename='js/main.js') }}"></script>
 </body>
 
 </html>
