added css shadow efect in card-box

--- a/seMgmtApp/templates/partials/cards.html
+++ b/seMgmtApp/templates/partials/cards.html
@@ -13,6 +13,9 @@
             <div class="row card-address-box">
                 <span>{{ property.address }}</span>
             </div>
+            <div class="row card-city-box">
+                <span>{{ property.city }}</span>
+            </div>
             <div class="row card-price-box">
                 <span class="card-type">
                     {% if property.rent_price != null %}
