--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
     text-decoration: none;
     font-family: "Roboto", sans-serif;
-    font-weight: 400; 
+    font-weight: 400;
 }
 
 main {
@@ -152,28 +152,44 @@ ul {
 
 .card-box {
     margin: 0 0 1rem 0;
-    border: 2px solid rgb(65, 65, 65);
+    border: 1px solid rgba(83, 83, 83, 0.698);
     border-radius: 15px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.card-box:hover {
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
 }
 
 .card-address-box {
     justify-content: center;
     font-weight: bold;
     margin: 0;
-    padding: 15px;
+    padding: 12px 10px 0 10px;
+}
+
+.card-city-box {
+    justify-content: center;
+    margin: 0;
+    padding: 2px 10px 5px 10px;
+    font-size: 22px;
 }
 
 .card-price-box {
     border: 2px solid grey;
     border-radius: 10px;
     justify-content: center;
-    margin: 0 10px;
-    padding: 15px 5px;
+    margin: 0 15px;
+    padding: 5px 3px;
 }
 
 .card-footer-box {
     margin: 0;
-    padding: 15px;
+    padding: 10px 5px;
 }
 
 .card-footer-beds,
@@ -234,6 +250,7 @@ ul {
 .bath-info {
     margin-left: 5px;
 }
+
 /* -----------------------------------
     MEDIA QUERY
 -------------------------------------- */
