--- a/seMgmtApp/templates/base.html
+++ b/seMgmtApp/templates/base.html
@@ -15,7 +15,7 @@
 <body> 
     <header>
         <!-- Navbar -->
-        {% include "navbar.html" %}
+        {% include "partials/navbar.html" %}
     </header>
     <main>
         <!-- Main content -->
@@ -24,7 +24,7 @@
     </main>
     <footer>
         <!-- Footer -->
-        {% include "footer.html" %}
+        {% include "partials/footer.html" %}
     </footer>
 
     <!-- Scripts-->
