--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="container-fluid col-11 col-md-8 col-lg-6 col-xl-5 add-property-container">
+<div class="container-fluid col-11 col-md-8 col-lg-6 col-xl-5 mb-4 add-property-container">
     <div class="row add-title mb-3">
         <h4>ADD NEW PROPERTY</h4>
     </div>
