--- a/seMgmtApp/templates/properties_list.html
+++ b/seMgmtApp/templates/properties_list.html
@@ -21,7 +21,7 @@
             </div>
 
         </div>
-        <div class="row">
+        <div class="row mb-3">
             <div class="col-sm-12">
                 <nav class="pagination-a">
                     <ul class="pagination justify-content-center">
