views.py name changed to routes.py in blueprints, register template and routes to mongodb, navbar.html with session validation

--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -23,6 +23,12 @@ ul {
     list-style-type: none;
 }
 
+.flash_message {
+    color: rgb(153, 70, 70);
+    justify-content: center;
+    font-size: 18px;
+}
+
 .nav-item {
     cursor: pointer;
 }
