--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -10,16 +10,25 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('properties.list_properties') }}">Properties</a>
+                </li>
+            {% if 'username' in session %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.index') }}">Add Recipe</a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.index') }}">Profile</a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('reg_login.logout') }}">Logout</a></li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('reg_login.register') }}">Create Account</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('properties.list_properties') }}" >Properties</a>
+                <a class="nav-link" href="{{ url_for('reg_login.login') }}">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('reg_login.register') }}" >Create Account</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('reg_login.login') }}" >Login</a>
-            </li>
+            {% endif %}
 
     </div>
 
