--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -10,13 +10,13 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('properties.list_properties') }}">Properties</a>
-                </li>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('properties.list_properties') }}">Properties</a>
+            </li>
             {% if 'username' in session %}
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('main.index') }}">Add Recipe</a></li>
+                <a class="nav-link" href="{{ url_for('properties.my_ads') }}">My Ads</a></li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('main.index') }}">Profile</a></li>
             <li class="nav-item">
