--- a/seMgmtApp/templates/partials/navbar.html
+++ b/seMgmtApp/templates/partials/navbar.html
@@ -12,7 +12,7 @@
                 <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('properties.list_properties') }}">Properties</a>
+                <a class="nav-link" href="{{ url_for('properties.list_properties') }}">All Properties</a>
             </li>
             {% if 'username' in session %}
             <li class="nav-item">
