--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Great Vibes:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Poppins:100,200,300,400,500,600,700');
 
 
 body {
@@ -176,10 +176,8 @@ ul {
     width: 200px;
 }
 
-.card-box,
-.property-details-box  {
+.card-box {
     margin: 0 0 1rem 0;
-    border: 1px solid rgba(83, 83, 83, 0.698);
     border-radius: 15px;
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -187,8 +185,7 @@ ul {
     transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
-.card-box,
-.property-details-box:hover {
+.card-box:hover {
     -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
 }
@@ -282,6 +279,9 @@ ul {
 /* Property Details */
 
 .property-details-box {
+    border-radius: 15px;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
     background-color: #fffffff7
 }
 
@@ -314,10 +314,37 @@ ul {
     width: 100%;
 }
 
+.details-property-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16), 0 2px 4px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.16), 0 6px 12px rgba(0, 0, 0, 0.23);
+}
+
 .details-address-box {
     margin: 0 10px 0 0;
 }
 
+.details-description-title {
+    display: flex;
+    justify-content: center;
+    padding: 12px 0;
+    font-family: "Poppins", sans-serif;
+    font-size: 27px;
+    font-weight: bold;
+}
+
+.summary-list-box {
+    padding: 0;
+    margin: 0;
+}
+
+.summary-list,
+.property-description {
+    padding: 0 10px;
+    margin: 0;
+}
 
 
 
@@ -351,6 +378,15 @@ ul {
 
     .details-price {
         justify-content: flex-end;
+    }
+
+    .property-image-box {
+        padding-right: 0;
+    }
+
+    .summary-list,
+    .property-description {
+        padding: 0;
     }
 }
 
